# djangoHW27

./: db.sqlite3  pyproject.toml
ads/: models.py  views.py
ads/migrations/: 0001_initial.py
data/: csv_to_json.py
djangoHW27/: settings.py  urls.py
